--- a/Makefile.target
+++ b/Makefile.target
@@ -423,6 +423,7 @@ obj-xtensa-y += core-fsf.o
 
 # [WmT] machine-specific
 obj-z80-y += zaphod.o
+obj-$(CONFIG_ZAPHOD_SERCON) += zaphod_sercon.o
 
 main.o: QEMU_CFLAGS+=$(GPROF_CFLAGS)
 
