--- a/Makefile.target
+++ b/Makefile.target
@@ -115,7 +115,14 @@ QEMU_CFLAGS+=-I$(SRC_PATH)/bblbrx-user
 obj-y = $(GENERATED_HEADERS)
 obj-y += main.o bblbrxload.o rawload.o
 
+# cpu emulator library
+libobj-y =
+libobj-y += helper.o
+
+obj-y += $(libobj-y)
+
 endif #CONFIG_BBLBRX_USER
+
 
 #########################################################
 # Linux user emulator target
