--- a/Makefile.target
+++ b/Makefile.target
@@ -113,12 +113,18 @@ QEMU_CFLAGS+=-I$(SRC_PATH)/bblbrx-user
 #QEMU_CFLAGS+=-I$(SRC_PATH)/bblbrx-user -I$(SRC_PATH)/bblbrx-user/$(TARGET_ABI_DIR)
 
 obj-y = $(GENERATED_HEADERS)
-obj-y += main.o bblbrxload.o rawload.o
+obj-y += main.o bblbrxload.o rawload.o mmap.o
 
 # cpu emulator library
-libobj-y = cpu-exec.o
+libobj-y = exec.o translate-all.o cpu-exec.o
+libobj-y += tcg/tcg.o
 libobj-y += helper.o
+libobj-y += disas.o
 
+obj-y += qemu-malloc.o user-exec.o $(oslib-obj-y)
+
+obj-y += $(addprefix ../libdis-user/, $(libdis-y))
+obj-y += $(addprefix ../libuser/, $(user-obj-y))
 obj-y += $(libobj-y)
 
 endif #CONFIG_BBLBRX_USER
