--- a/Makefile.target
+++ b/Makefile.target
@@ -115,6 +115,8 @@ QEMU_CFLAGS+=-I$(SRC_PATH)/bblbrx-user
 obj-y = $(GENERATED_HEADERS)
 obj-y += main.o bblbrxload.o rawload.o mmap.o
 
+obj-z80-y += ioport-user.o
+
 # cpu emulator library
 libobj-y = exec.o translate-all.o cpu-exec.o translate.o
 libobj-y += tcg/tcg.o
