Makefile.target cpu_XXX_exec() needs cpu-exec.o

--- a/Makefile.target
+++ b/Makefile.target
@@ -158,6 +158,7 @@ $(obj-y) $(obj-$(TARGET_BASE_ARCH)-y): $(GENERATED_HEADERS)
 
 ## build subset (or none) of cpu emulator library
 libobj-y =
+libobj-y += cpu-exec.o
 libobj-y += helper.o
 
 #obj-y += $(addprefix ../libuser/, $(user-obj-y))
