--- a/Makefile.target
+++ b/Makefile.target
@@ -118,7 +118,7 @@ obj-y += main.o bblbrxload.o rawload.o mmap.o
 # cpu emulator library
 libobj-y = exec.o translate-all.o cpu-exec.o translate.o
 libobj-y += tcg/tcg.o
-libobj-y += helper.o
+libobj-y += op_helper.o helper.o
 libobj-y += disas.o
 
 obj-y += qemu-malloc.o user-exec.o $(oslib-obj-y)
