--- a/Makefile.target
+++ b/Makefile.target
@@ -161,7 +161,7 @@ $(obj-y) $(obj-$(TARGET_BASE_ARCH)-y): $(GENERATED_HEADERS)
 libobj-y =
 libobj-y += exec.o translate-all.o cpu-exec.o translate.o
 libobj-y += tcg/tcg.o tcg/optimize.o
-libobj-y += helper.o
+libobj-y += op_helper.o helper.o
 libobj-y += disas.o
 
 obj-y += $(addprefix ../libuser/, $(user-obj-y))
