--- a/Makefile.target
+++ b/Makefile.target
@@ -421,6 +421,9 @@ obj-xtensa-y += xtensa-semi.o
 obj-xtensa-y += core-dc232b.o
 obj-xtensa-y += core-fsf.o
 
+# [WmT] machine-specific
+obj-z80-y += zaphod.o
+
 main.o: QEMU_CFLAGS+=$(GPROF_CFLAGS)
 
 monitor.o: hmp-commands.h qmp-commands-old.h
