--- a/Makefile.target
+++ b/Makefile.target
@@ -424,6 +424,7 @@ obj-xtensa-y += core-fsf.o
 # [WmT] machine-specific
 obj-z80-y += zaphod.o
 obj-$(CONFIG_ZAPHOD_SERCON) += zaphod_sercon.o
+obj-$(CONFIG_ZAPHOD_SCREEN) += zaphod_screen.o
 
 main.o: QEMU_CFLAGS+=$(GPROF_CFLAGS)
 
