--- a/Makefile.target
+++ b/Makefile.target
@@ -404,7 +404,8 @@ obj-alpha-y = i8259.o mc146818rtc.o
 obj-alpha-y += vga.o cirrus_vga.o
 
 # [WmT] machine-specific
-obj-z80-y += zaphod.o zaphod_console.o zaphod_serial.o
+obj-z80-y += zaphod.o zaphod_console.o zaphod_screen.o zaphod_serial.o
+#obj-z80-y += zaphod.o zaphod_console.o zaphod_serial.o
 
 main.o: QEMU_CFLAGS+=$(GPROF_CFLAGS)
 
