WIP: enable, build zaphod_screen.c

--- a/Makefile.target
+++ b/Makefile.target
@@ -307,7 +307,8 @@ obj-s390x-y = s390-virtio-bus.o s390-virtio.o
 obj-z80-y =i8259.o
 #obj-z80-y = serial.o
 # [WmT] machine-specific
-obj-z80-y += zaphod.o zaphod_console.o zaphod_serial.o
+obj-z80-y += zaphod.o zaphod_console.o zaphod_screen.o zaphod_serial.o
+#obj-z80-y += zaphod.o zaphod_console.o zaphod_serial.o
 
 main.o vl.o: QEMU_CFLAGS+=$(GPROF_CFLAGS)
 
