Add/configure zaphod_screen.[ch]

--- a/hw/z80/Kconfig
+++ b/hw/z80/Kconfig
@@ -1,3 +1,9 @@
 config ZAPHOD
     # Support for Zaphod machine family
     # Sample machine inspired by Phil Brown's Amiga Z80 system emulator
+    select ZAPHOD_HAS_SCREEN
+
+config ZAPHOD_HAS_SCREEN
+    # Enable screen emulation
+    bool
+    depends on ZAPHOD
