--- a/hw/z80/Makefile.objs
+++ b/hw/z80/Makefile.objs
@@ -2,3 +2,4 @@ obj-$(CONFIG_ZAPHOD) += zaphod.o
 
 obj-$(CONFIG_ZAPHOD_HAS_IOCORE) += zaphod_iocore.o
 obj-$(CONFIG_ZAPHOD_HAS_UART) += zaphod_uart.o
+obj-$(CONFIG_ZAPHOD_HAS_SCREEN) += zaphod_screen.o
