--- a/Makefile.target
+++ b/Makefile.target
@@ -158,7 +158,7 @@ $(obj-y) $(obj-$(TARGET_BASE_ARCH)-y): $(GENERATED_HEADERS)
 
 ## build subset (or none) of cpu emulator library
 libobj-y =
-#libobj-y += ...
+libobj-y += helper.o
 
 #obj-y += $(addprefix ../libuser/, $(user-obj-y))
 #obj-y += $(addprefix ../libdis-user/, $(libdis-y))
