ALIGN: Zaphod config/build

--- a/Makefile.target
+++ b/Makefile.target
@@ -421,6 +421,12 @@ obj-xtensa-y += xtensa-semi.o
 obj-xtensa-y += core-dc232b.o
 obj-xtensa-y += core-fsf.o
 
+# [WmT] machine-specific
+obj-z80-y += zaphod.o
+obj-$(CONFIG_ZAPHOD_SERCON) += zaphod_sercon.o
+obj-$(CONFIG_ZAPHOD_SCREEN) += zaphod_screen.o
+obj-$(CONFIG_ZAPHOD_MC6850) += zaphod_mc6850.o
+
 main.o: QEMU_CFLAGS+=$(GPROF_CFLAGS)
 
 monitor.o: hmp-commands.h qmp-commands-old.h
