--- a/Makefile.target
+++ b/Makefile.target
@@ -77,7 +77,9 @@ obj-y += tcg/tcg.o tcg/optimize.o
 obj-$(CONFIG_TCG_INTERPRETER) += tci.o
 obj-$(CONFIG_TCG_INTERPRETER) += disas/tci.o
 obj-y += fpu/softfloat.o
+ifneq (${TARGET_BASE_ARCH},z80)
 obj-y += target-$(TARGET_BASE_ARCH)/
+endif
 obj-y += disas.o
 obj-$(call notempty,$(TARGET_XML_FILES)) += gdbstub-xml.o
 obj-$(call lnot,$(CONFIG_KVM)) += kvm-stub.o
@@ -145,7 +147,9 @@ obj-$(call lnot,$(CONFIG_XEN)) += xen-stub.o
 ifeq ($(TARGET_NAME), sparc64)
 obj-y += hw/sparc64/
 else
+ifneq (${TARGET_BASE_ARCH},z80)
 obj-y += hw/$(TARGET_BASE_ARCH)/
+endif
 endif
 
 main.o: QEMU_CFLAGS+=$(GPROF_CFLAGS)
