--- a/Makefile.target
+++ b/Makefile.target
@@ -114,6 +114,7 @@ QEMU_CFLAGS+=-I$(SRC_PATH)/bblbrx-user
 
 obj-y += bblbrx-user/
 #obj-y += gdbstub.o user-exec.o
+obj-y += user-exec.o
 
 endif #CONFIG_BBLBRX_USER
 
