Zaphod: configure/build for MC6850 (serial) device

--- a/hw/z80/Makefile.objs
+++ b/hw/z80/Makefile.objs
@@ -1,3 +1,4 @@
 obj-y += zaphod.o
 obj-$(CONFIG_ZAPHOD_SERCON) += zaphod_sercon.o
 obj-$(CONFIG_ZAPHOD_SCREEN) += zaphod_screen.o
+obj-$(CONFIG_ZAPHOD_MC6850) += zaphod_mc6850.o
