--- a/Makefile.target
+++ b/Makefile.target
@@ -109,7 +109,7 @@ QEMU_CFLAGS+=-I$(SRC_PATH)/bblbrx-user
 obj-y=
 obj-y += target-$(TARGET_BASE_ARCH)/
 #obj-$(call notempty,$(TARGET_XML_FILES)) += gdbstub-xml.o
-#obj-$(call lnot,$(CONFIG_KVM)) += kvm-stub.o
+obj-$(call lnot,$(CONFIG_KVM)) += kvm-stub.o
 
 obj-y += bblbrx-user/
 #obj-y += gdbstub.o user-exec.o
