Makefile.target: QOM needs kvm-stub.o, exec.o

--- a/Makefile.target
+++ b/Makefile.target
@@ -107,9 +107,10 @@ QEMU_CFLAGS+=-I$(SRC_PATH)/bblbrx-user
 
 ## build subset (or none) of cpu emulator library
 obj-y=
+obj-y += exec.o
 obj-y += target-$(TARGET_BASE_ARCH)/
 #obj-$(call notempty,$(TARGET_XML_FILES)) += gdbstub-xml.o
-#obj-$(call lnot,$(CONFIG_KVM)) += kvm-stub.o
+obj-$(call lnot,$(CONFIG_KVM)) += kvm-stub.o
 
 obj-y += bblbrx-user/
 #obj-y += gdbstub.o user-exec.o
