--- a/Makefile.target
+++ b/Makefile.target
@@ -110,6 +110,7 @@ obj-y=
 obj-y += exec.o translate-all.o
 obj-y += tcg/tcg.o tcg/optimize.o
 obj-y += target-$(TARGET_BASE_ARCH)/
+obj-y += disas.o
 #obj-$(call notempty,$(TARGET_XML_FILES)) += gdbstub-xml.o
 obj-$(call lnot,$(CONFIG_KVM)) += kvm-stub.o
 
