WIP: "subset" build with cpu-exec.o

--- a/Makefile.target
+++ b/Makefile.target
@@ -107,7 +107,7 @@ QEMU_CFLAGS+=-I$(SRC_PATH)/bblbrx-user
 
 ## build subset (or none) of cpu emulator library
 obj-y=
-obj-y += exec.o translate-all.o
+obj-y += exec.o translate-all.o cpu-exec.o
 obj-y += tcg/tcg.o tcg/optimize.o
 obj-y += target-$(TARGET_BASE_ARCH)/
 obj-y += disas.o
