--- a/Makefile.target
+++ b/Makefile.target
@@ -130,6 +130,7 @@ QEMU_CFLAGS+=-I$(SRC_PATH)/bblbrx-user
 ## build subset (or none) of cpu emulator library
 obj-y=
 obj-y += exec.o
+obj-y += accel/
 
 obj-y += bblbrx-user/
 #obj-y += gdbstub.o user-exec.o
