--- a/Makefile.target
+++ b/Makefile.target
@@ -131,6 +131,7 @@ QEMU_CFLAGS+=-I$(SRC_PATH)/bblbrx-user
 obj-y=
 obj-y += exec.o
 obj-y += accel/
+obj-y += target/$(TARGET_BASE_ARCH)/
 obj-y += disas.o
 
 obj-y += bblbrx-user/
