Makefile.target: "subset" with TCG objects

--- a/Makefile.target
+++ b/Makefile.target
@@ -131,6 +131,8 @@ QEMU_CFLAGS+=-I$(SRC_PATH)/bblbrx-user
 obj-y=
 obj-y += exec.o
 obj-y += accel/
+obj-$(CONFIG_TCG) += tcg/tcg.o tcg/tcg-op.o tcg/tcg-op-vec.o tcg/tcg-op-gvec.o
+obj-$(CONFIG_TCG) += tcg/tcg-common.o tcg/optimize.o
 obj-y += target/$(TARGET_BASE_ARCH)/
 obj-y += disas.o
 
