z80-softmmu: restrict early build attempts
Minimise the z80-softmmu build to ensure a swift exit until we have a
minimal amount of support code.

--- a/Makefile.objs
+++ b/Makefile.objs
@@ -105,7 +105,9 @@ common-obj-y += migration/
 
 common-obj-y += audio/
 common-obj-m += audio/
+ifneq (${TARGET_BASE_ARCH},z80)
 common-obj-y += hw/
+endif
 
 common-obj-y += replay/
 
