--- a/Makefile.target
+++ b/Makefile.target
@@ -98,7 +98,9 @@ obj-$(CONFIG_TCG) += tcg/tcg-common.o tcg/optimize.o
 obj-$(CONFIG_TCG_INTERPRETER) += tcg/tci.o
 obj-$(CONFIG_TCG_INTERPRETER) += disas/tci.o
 obj-y += fpu/softfloat.o
+ifneq (${TARGET_BASE_ARCH},z80)
 obj-y += target/$(TARGET_BASE_ARCH)/
+endif
 obj-y += disas.o
 obj-$(call notempty,$(TARGET_XML_FILES)) += gdbstub-xml.o
 
@@ -132,6 +134,8 @@ endif #CONFIG_BSD_USER
 #########################################################
 # System emulator target
 ifdef CONFIG_SOFTMMU
+TRACE:= $(shell echo "*** CONFIG_SOFTMMU build with base arch of '$(TARGET_BASE_ARCH)' ***" 1>&2)
+ifneq (${TARGET_BASE_ARCH},z80)
 obj-y += arch_init.o cpus.o monitor.o gdbstub.o balloon.o ioport.o numa.o
 obj-y += qtest.o
 obj-y += hw/
@@ -140,12 +144,15 @@ obj-y += memory_mapping.o
 obj-y += dump.o
 obj-y += migration/ram.o
 LIBS := $(libs_softmmu) $(LIBS)
+endif
 
 # Hardware support
 ifeq ($(TARGET_NAME), sparc64)
 obj-y += hw/sparc64/
 else
+ifneq (${TARGET_BASE_ARCH},z80)
 obj-y += hw/$(TARGET_BASE_ARCH)/
+endif
 endif
 
 GENERATED_FILES += hmp-commands.h hmp-commands-info.h
